--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "fs-extra": "^3.0.1",
     "gitlab": "^1.7.1",
     "nodegit": "^0.18.3",
-    "promisify": "0.0.3"
+    "promisify": "0.0.3",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
